- added spanish ECO file scid-esp.eco (thanks to Benigno Hernández)
- newly created bases are appended to the recently opened bases in menu (thanks to Benigno Hernández)
- "Average Elo" and "average year" could be wrong with large databases. Corrected by using 64 bits integers (thanks to Heinz van Saanen)
- PGN window : colors for current and next moves are now user configurable
- Bug fix : Scid could crash when using some languages like Hungarian and Swedish (segfault in functions transPieces and transPiecesChar)
- Added piece translations for hungarian, swedish and norvegian languages
- Serious and tactical games : fixed repetition detection
- Changed the way SPF files (data players) are loaded. This spares some memory and Scid's start up is a little bit faster. New script in scripts directory : scf2spi.tcl (thanks to Mikhail Kalenkov)
- Players' name standarization : strictly follow PGN requests by leaving a period after an initial (standardPlayerName in pgnparse.cpp)
- Unix version : changed the way the tkscid path is searched to use scid's directory (thanks to Joost´t Hart)

[March 2009 ]

scid-3.7.1
-----------
- Bug fix : dialog to export games locked Scid UI under Windows
- Correspondence Chess
  * Fix: Ctrl-F12 did not work from other windows than the main window
  * New Shortcut: Alt-F12 will open CC window, default DB and fetch the games
- Plenty of changes in user interface, among others :
	* USCF piece set

[xxx 2009 ]

scid-3.7.2
-----------
- updated swedish translation (thanks to Hans Eriksson)
- FICS : user interface improvements : 
	* click on a game to observe it
	* redesign in notebook style
	* better looking offers graph
	* used icons from http://webdesignledger.com/freebies/21-best-icon-sets-for-designing-web-apps
	* added a check box to enable standard user variables
- Fixed a small bug when closing ECO graph window (missing cleanup)
- Correspondence Chess:
	* Add confirmation dialogue of CC moves